Fix footer padding issue (from overlapping into content)

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,6 +1,7 @@
 #dashboard-container {
   width: 100%;
   margin-top: 3rem;
+  padding-bottom: 125px;
 
   // COMPONENT 1 (top right)
   #portfoliochart-container {
