--- a/app/assets/stylesheets/details_page.scss
+++ b/app/assets/stylesheets/details_page.scss
@@ -53,7 +53,9 @@ h3.current-price {
 
 
 div#detail-wrapper {
-	margin: 3.5rem 7rem;
+	// margin: 3.5rem 7rem;
+	margin: 3.5rem 7rem 0 3.5rem;
+	padding-bottom: 125px;
 	width: 800px;
 	// background: pink;												    	// FOR TESTING
 	display: flex;
