--- a/app/assets/stylesheets/search_page.scss
+++ b/app/assets/stylesheets/search_page.scss
@@ -7,6 +7,7 @@
   margin: 0 auto;
   margin-top: 3rem;
   padding: 0 7rem;
+  padding-bottom: 125px;
 }
 
 .search-table {
